feat: parametirization :sparkles:

--- a/llm.ipynb
+++ b/llm.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN33D2Dtz3SwZkinTKEynHJ",
+      "authorship_tag": "ABX9TyNMzI/SY/AMVdI7XlwshwgX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Install lib"
+      ],
+      "metadata": {
+        "id": "CPTW9z4PeF8n"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -36,6 +45,15 @@
       "source": [
         "!pip install -q langchain_community replicate"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import libs"
+      ],
+      "metadata": {
+        "id": "yVjP0_w1eJYL"
+      }
     },
     {
       "cell_type": "code",
@@ -61,6 +79,15 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Prompt"
+      ],
+      "metadata": {
+        "id": "VMjfXvbzeMfW"
+      }
     },
     {
       "cell_type": "markdown",
@@ -229,20 +256,223 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Parameterization"
+        "# Parameterization"
       ],
       "metadata": {
         "id": "1KZylSGBc_bj"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Classification"
+      ],
       "metadata": {
-        "id": "jSydffYWaFLQ"
+        "id": "EdM9GMDJeZlZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the customer reviews\n",
+        "customer_reviews_parameterization = [\n",
+        "    \"The battery lasts all day, and the performance is excellent.\",\n",
+        "    \"The screen is too dim outdoors, but I love the colors indoors.\",\n",
+        "    \"This phone is slow and keep crashing when I open certain apps.\"\n",
+        "]\n",
+        "\n",
+        "# Refine the prompt to include reviews\n",
+        "reviews_text_parameterization = \"\\n\".join([f\"Review {i+1}: {review}\" for i, review in enumerate(customer_reviews_parameterization)])"
+      ],
+      "metadata": {
+        "id": "dQxqq3QKeekF"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set model parameters for prompting with default values\n",
+        "parameters = {\n",
+        "    \"top_k\": 0,\n",
+        "    \"top_p\": 1.0,\n",
+        "    \"max_tokens\": 256,\n",
+        "    \"min_tokens\": 0,\n",
+        "    \"random_seed\": None,\n",
+        "    \"repetition_penalty\": 1.0,\n",
+        "    \"stopping_criteria\": \"length (256 tokens)\",\n",
+        "    \"stopping_sequence\": None\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "3nR2Rqw1lIY7"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add initial prompt\n",
+        "\n",
+        "refined_prompt_parameterization = f\"\"\"\\\n",
+        "Classify these reviews as Positive, Negative, or Mixed and tag\n",
+        "relevant focus areas such as battery life, screen quality, or performance\n",
+        "\n",
+        "{reviews_text_parameterization}\n",
+        "\"\"\"\n",
+        "\n",
+        "# Invoke the model\n",
+        "response_parameterization = output.invoke(refined_prompt_parameterization, parameters=parameters)\n",
+        "\n",
+        "# Print the response\n",
+        "print(\"Granite Model Response:\\n\")\n",
+        "print(response_parameterization)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l0aHTEMmlvaQ",
+        "outputId": "ab2b2275-3e8b-402c-fd13-3dca863753f6"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Granite Model Response:\n",
+            "\n",
+            "1. Review 1: Positive; Focus areas - Battery life, Performance\n",
+            "2. Review 2: Mixed; Focus areas - Screen quality (dim outdoors, good colors indoors)\n",
+            "3. Review 3: Negative; Focus areas - Performance (slow), Stability (crashing issue)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parameters = {\n",
+        "    \"top_k\": 5,\n",
+        "    \"top_p\": 1.0,\n",
+        "    \"max_tokens\": 256,\n",
+        "    \"min_tokens\": 0,\n",
+        "    \"random_seed\": None,\n",
+        "    \"repetition_penalty\": 1.0,\n",
+        "    \"stopping_criteria\": \"length (256 tokens)\",\n",
+        "    \"stopping_sequence\": None\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "-KrA7LBjm3Xj"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add initial prompt after update parameter top_k\n",
+        "\n",
+        "refined_prompt_parameterization = f\"\"\"\\\n",
+        "Classify these reviews as Positive, Negative, or Mixed and tag\n",
+        "relevant focus areas such as battery life, screen quality, or performance\n",
+        "\n",
+        "{reviews_text_parameterization}\n",
+        "\"\"\"\n",
+        "\n",
+        "# Invoke the model\n",
+        "response_parameterization = output.invoke(refined_prompt_parameterization, parameters=parameters)\n",
+        "\n",
+        "# Print the response\n",
+        "print(\"Granite Model Response:\\n\")\n",
+        "print(response_parameterization)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lLel8xBpm93A",
+        "outputId": "1a9bc3d4-bb01-4c1b-c9e0-e38f69ad3d01"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Granite Model Response:\n",
+            "\n",
+            "1. Positive, focusing on battery life and performance.\n",
+            "2. Mixed, with negative focus on outdoor screen dimness and positive on indoor color quality.\n",
+            "3. Negative, focusing on poor performance and frequent crashes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summarization"
+      ],
+      "metadata": {
+        "id": "TLXsvILpecRW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parameters = {\n",
+        "    \"top_k\": 1,\n",
+        "    \"top_p\": 1.0,\n",
+        "    \"max_tokens\": 256,\n",
+        "    \"min_tokens\": 0,\n",
+        "    \"random_seed\": None,\n",
+        "    \"repetition_penalty\": 1.0,\n",
+        "    \"stopping_criteria\": \"length (256 tokens)\",\n",
+        "    \"stopping_sequence\": None\n",
+        "}\n",
+        "\n",
+        "# Add initial prompt after update parameter top_k\n",
+        "\n",
+        "refined_prompt_parameterization = f\"\"\"\\\n",
+        "Classify these reviews as Positive, Negative, or Mixed and tag\n",
+        "relevant focus areas such as battery life, screen quality, or performance\n",
+        "\n",
+        "{reviews_text_parameterization}\n",
+        "\"\"\"\n",
+        "\n",
+        "# Invoke the model\n",
+        "response_parameterization = output.invoke(refined_prompt_parameterization, parameters=parameters)\n",
+        "\n",
+        "# Print the response\n",
+        "print(\"Granite Model Response:\\n\")\n",
+        "print(response_parameterization)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UegrN8g4nUcP",
+        "outputId": "0cc2e980-0017-4fb3-b06e-b9345f14581f"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Granite Model Response:\n",
+            "\n",
+            "1. Positive, Focuses on battery life and performance.\n",
+            "2. Mixed, Focuses on screen quality (dim outdoors, good colors indoors).\n",
+            "3. Negative, Focuses on performance (slow, frequent crashes).\n"
+          ]
+        }
+      ]
     }
   ]
 }
